fix horizontal alignment and spacing

--- a/styles.css
+++ b/styles.css
@@ -77,9 +77,15 @@
     padding: 0;
 }
 
-body {
+
+.page {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: var(--spacing-1000) 0;
     background-color: var(--cream);
-    padding: var(--spacing-1000) var(--spacing-100);
     font-size: 16px;
 }
 
@@ -161,13 +167,13 @@ body {
 }
 
 .attribution {
-    padding-top: var(--spacing-1000);
+    padding-top: var(--spacing-400);
 }
 
 @media screen and (min-width: 768px) {
 
     body {
-        padding: var(--spacing-1600) var(--spacing-100);
+        margin: var(--spacing-1600) 0;
     }
 
     .card {
